# tree-sitter-deb822

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json  tree_sitter_deb822.go  tree_sitter_deb822_test.go
bindings/c/: tree-sitter-deb822.h  tree-sitter-deb822.pc.in
bindings/go/: binding.go  binding_test.go  go.mod  go.sum
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_deb822/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDeb822Tests/: TreeSitterDeb822Tests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comments.txt  edgecases.txt  errors.txt  folded.txt  simple.txt
