[package]
name = "tree-sitter-deb822"
description = "deb822 grammar for the tree-sitter parsing library"
version = "0.2.1"
keywords = ["incremental", "parsing", "deb822"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-deb822"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
